keep white color on visited

--- a/public/styles/Student.css
+++ b/public/styles/Student.css
@@ -114,6 +114,10 @@
     position: relative;
   }
 
+  a.bubble:visited {
+    color: white;
+  }
+
   .bubble:hover,
   .bubble:focus {
     box-shadow: #00000025 15px 15px 10px 0px;
