--- a/public/styles/new-assignment.css
+++ b/public/styles/new-assignment.css
@@ -9,6 +9,10 @@ main {
   justify-content: space-between;
 }
 
+#estimatedScores {
+  display: block;
+}
+
 main > section {
   width: calc(50% - 1em);
 }
